@@ -104,7 +104,7 @@ class GenericReporterTest {
 
     var documentContext = TestUtils.getDocumentContext("");
     Location location = new Location("file:///fake-uri2.bsl", Ranges.create(0, 2, 2, 3));
-    diagnostics.get(0).setRelatedInformation(Collections.singletonList(new DiagnosticRelatedInformation(location, "message")));
+    diagnostics.getFirst().setRelatedInformation(Collections.singletonList(new DiagnosticRelatedInformation(location, "message")));
 
     String sourceDir = ".";
     FileInfo fileInfo = new FileInfo(sourceDir, documentContext, diagnostics);
@@ -119,7 +119,7 @@ class GenericReporterTest {
     assertThat(report).isNotNull();
     assertThat(report.getIssues()).isNotNull();
     assertThat(report.getIssues()).hasSize(3);
-    assertThat(report.getIssues().get(0).getPrimaryLocation()).isNotNull();
+    assertThat(report.getIssues().getFirst().getPrimaryLocation()).isNotNull();
     assertThat(report.getIssues().get(0).getSecondaryLocations()).isNotNull();
     assertThat(report.getIssues().get(0).getSecondaryLocations()).hasSize(1);
     assertThat(report.getIssues().get(2).getRuleId()).isEqualTo(secondInfo.getCode().getStringValue());
